Build bug fix. (fixed CMAKE)
Change-Id: Ib4f0de35e761cd9004cd455efee5c6ba5aad1e04
Signed-off-by: Minje Ahn <minje.ahn@samsung.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ EXECUTE_PROCESS( COMMAND uname -m COMMAND tr -d '\n' OUTPUT_VARIABLE ARCHITECTUR
 
 if( ${ARCHITECTURE} STREQUAL "aarch64" )
   set(LIB_SUFFIX "64" CACHE STRING "Define suffix of directory name (32/64)")
+elseif( ${ARCHITECTURE} STREQUAL "x86_64" )
+  set(LIB_SUFFIX "64" CACHE STRING "Define suffix of directory name (32/64)")
 else()
   set(LIB_SUFFIX "" CACHE STRING "Define suffix of directory name (32/64)")
 endif()
